<resources>
    <string name="app_name">week3_somruethai</string>
<!-- page1 -->
    <string name="tv_header1">คุณคิดว่าเมมเบอร์RVVชื่ออะไรบ้าง</string>
    <string name="tv_fname">คนที่ 1</string>
    <string name="tv_lname">คนที่ 2</string>
    <string name="tv_3">คนที่ 3</string>
    <string name="tv_4">คนที่ 4</string>
    <string name="tv_5">คนที่ 5</string>
    <string name="btn_sender">ส่งข้อมูล</string>
    <string name="btn_clear">ล้างข้อมูล</string>
    <string name="btn_close">ปิดโปรแกรม</string>
<!-- page2 -->
    <string name="tv_header2">คำตอบของคุณก็คือ</string>
    <string name="btn_back">กลับ</string>
</resources>
